# ml_api_comparison

./: .gitignore  README.md
fapi/: factory.py  input_model.py  load_model.py  main.py  pyproject.toml
fapi/mlmodels/: base_ml_model.py  lgb_ml_model.py  onnx_ml_model.py
flask_api/: README.md  main.py  measure_time.py  pyproject.toml
flask_api/mlmodels/: __init__.py  torch_ml_model.py
models/: mlp_torch.onnx  mlp_torch.pth  mlp_torch_preprocess.joblib  mlp_torch_preprocess.json  titanic_lgb.onnx  titanic_lgb_model.txt
notebook/: LightGBM_Training.ipynb  PyTorch_Training.ipynb
rapi-ort/: Cargo.toml  README.md
rapi-ort/src/: main.rs  model.rs  onnx_backend.rs  preprocess.rs
rapi-tract/: Cargo.toml
rapi-tract/src/: main.rs  model.rs  onnx_backend.rs  preprocess.rs
