[project]
name = "flask_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.1",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "torch>=2.8.0",
]
