[package]
name = "rapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ★ IR v10 対応（ORT 1.22 同梱）: プレリリース版を明示
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }

# ★ v2 は ndarray 0.16 を推奨（Value抽出の型が合う）
ndarray = "0.16"

anyhow = "1.0"
async-trait = "0.1"
