[package]
name = "ml-infer-server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
anyhow = "1"
ndarray = { version = "0.16.1", default-features = true, features = ["std", "serde"] }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "ndarray"] }
num_cpus = "1"
serde_with = "3"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
