[package]
name = "rapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
async-trait = "0.1"

# ===== switched from ort to tract =====
tract-onnx = "0.22"
tract-core = "0.22"

# ndarray は tract-onnx が re-export しますが、明示依存でもOK
ndarray = "0.16"
